--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>english teachers</title>
+</head>
+<body>
 
+<h1>all english teachers:</h1>
+  <li>Mr David O’Hara</li>
+<li>Ms Patricia Franklin</li>
+<li>Ms Sarah Doyle</li>
+<li>Ms Majella Murphy</li>
+<li>Ms Lucy Keane</li>
+<li>Ms Aisling Martin</li>
+<li>Ms Íde Malone</li>
+</body>
+</html>
