--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>english teachers</title>
+<title english teachers</title>
 </head>
 <body>
 
-<h1>style="color:red;">style="color:red;">All English Teachers:</h1>
+<h1> tyle="color:red;">style="color:red;">All English Teachers:</h1>
   <li>Mr David O’Hara</li>
 <li>Ms Patricia Franklin</li>
 <li>Ms Sarah Doyle</li>
