--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1> tyle="color:red;">style="color:red;">All English Teachers:</h1>
+<h1 tyle="color:red;">style="color:red;">All English Teachers:</h1>
   <li>Mr David O’Hara</li>
 <li>Ms Patricia Franklin</li>
 <li>Ms Sarah Doyle</li>
