--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
 <body>
 
 <h1 style="color:red;">All English Teachers:</h1>
+   <li> Ms Sarah Doyle</li>
+   <li>Ms Patricia Franklin</li>
+<li> Ms Íde Malone</li>
+<li>Mr David O’Hara</li>
+<li> ms Majella murphy</li>
+<li>ms Aisling martin</li>
+<li>ms Lucy kean</li>
 
-   {
-"employees":[
-    {"firstName":"david", "lastName":"O'hara"}, 
-    {"firstName":"Patricia", "lastName":"Franklin"},
-    {"firstName":"Sarah", "lastName":"Doyle"}
-    {"firstName":"Majella", "lastName":"Murphy"}, 
-    {"firstName":"Lucy", "lastName":"Keane"},
-    {"firstName":"Aisling", "lastName":"Martin"}
-     {"firstName":"Íde", "lastName":"malone"}
-  ]
-    
-} 
-  
-
-  
+   
+   
+   
 </body>
 </html>
