--- a/index.html
+++ b/index.html
@@ -2,7 +2,42 @@
 <html>
 <head>
 <title> english teachers</title>
-</head>
+<style>
+   div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+    
+    
+    header, footer {
+    padding: 1em;
+    color: black;
+    background-color: DodgerBlue;
+    clear: left;
+    text-align: center;
+}
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}</style>
+   
+   </head>
 <body>
 
 <h1 style="color:red;">All English Teachers:</h1>
