--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@ article {
 <li>ms Aisling martin</li>
 <li>ms Lucy kean</li>
 
-   
+   </article>
+
+<footer>Contact us:St Joseph's Secondary School, Convent Lane, Rush Co.Dublin, T:01-8437534,F:01-8439690, E:office@stjosephsrush.ie</footer>
+
    
    
 </body>
