--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+       <!DOCTYPE html>
 <html>
 <head>
-<title> english teachers</title>
 <style>
-   div.container {
+div.container {
     width: 100%;
     border: 1px solid gray;
 }
-    
+
+
+
     
     header, footer {
     padding: 1em;
@@ -16,12 +17,14 @@
     clear: left;
     text-align: center;
 }
+
 nav {
     float: left;
     max-width: 160px;
     margin: 0;
     padding: 1em;
 }
+
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -30,16 +33,26 @@ nav ul {
 nav ul a {
     text-decoration: none;
 }
+
 article {
     margin-left: 170px;
     border-left: 1px solid gray;
-    padding: 1em;
+
+padding: 1em;
     overflow: hidden;
-}</style>
-   
-   </head>
+}
+</style>
+</head>
 <body>
 
+<div class="container">
+
+<header>
+   <h1 tyle="color:red;">St Joseph's English Page </h1>
+</header>
+  
+<nav>
+  <ul>
 
 <li> Ms Sarah Doyle</li>
 <li>Ms Patricia Franklin</li>
