--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ padding: 1em;
 
 <footer>Contact us:St Joseph's Secondary School, Convent Lane, Rush Co.Dublin, T:01-8437534,F:01-8439690, E:office@stjosephsrush.ie</footer>
 
-   
+       </div>
    
 </body>
 </html>
