--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ div.container {
 nav {
     float: left;
     max-width: 10000x;
-    margin: 0;
+     width: 100%;
+       margin: 0;
     padding: 1em;
 }
 
